# minimal-agent

./: .gitignore  README.bedrock.md  README.deep-agent.md  README.langgraph.md  README.md  deep-agent.py  langgraph_agent.py  langsmith_agent.py  main.py  my_agent.py  pyproject.toml
da_example/copy_the_example_codes/: deep_agents_example.py  deep_agents_example_page.py
docs/: implementation-log-langgraph-openai.md
ollama/: agent_with_tool_calling.py  multi_modal_agent.py  ollama_agent.py  ollama_stream_agent.py
